hooked up user routes
